--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
+    "@supabase/supabase-js": "^1.33.3",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "react-query": "^3.39.2",
+    "tailwindcss": "^3.2.0",
+    "zustand": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
@@ -20,6 +28,6 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",    
   }
 }
